2005-01-26  Marc Singer  <elf@buici.com>

	* src/mach-lh7952x/adc.c (cmd_adc): Basic adc code working.

	* src/apex/console-printf.c (printf): Automatic insertion of
	carriage-returns before newlines.
 
2005-01-21  Marc Singer  <elf@buici.com>

	* src/mach-lh7952x/drv-nor-cfi.c (nor_report): Added report
	function to nor driver.

	* src/mach-lh7a40x/drv-nor.c (nor_report): Added report funtion to
	nor driver.

2005-01-13  Marc Singer  <elf@buici.com>

	* src/apex/cmd-version.c (cmd_version): Rewording signon.

	* src/mach-lh7952x/Makefile (obj-$(CONFIG_MACH_LPD79524)): Moved
	adc to 79524 specific build.

	* scripts/configtoh: Fixed the script to properly elide comments. 

2005-01-12  Marc Singer  <elf@buici.com>

	* README_config: Editing the documentation.

	* Makefile (include/config.h): Fixed the script that generates the
	configuration file.
	(tidy): New target to remove debris.

2004-12-05  Marc Singer  <elf@buici.com>

	* src/lib/env.c (_env_check_magic): Magic number inserted at the
	start of the environment to protect user from bogus data.

	* src/mach-lh7a40x/drv-nor.c (nor_write): LPD7A40X targets
	completely supported though buffered writes to NOR flash not yet
	implemented.

2004-12-01  Marc Singer  <elf@buici.com>

	* README: New README(s) in preparation to release the source.

2004-11-17  Marc Singer  <elf@buici.com>

	* src/mach-lh7952x/drv-nor.c (nor_write): Fixed a buglet in
	buffered writes where the size of the write was incorrect in some
	edge cases.

	* src/mach-lh7952x/drv-cpld-spi.c: Added cpld-spi drivers for
	configuration EEPROM and for the MAC EEPROM.

	* src/mach-lh7952x/drv-emac.c (emac_read_mac): Fixed the EEPROM
	code.
	(cmd_emac): Removed eeprom specifics into another driver.

	* src/lib/dump.c (dump): Correct bug offset to rgb.

2004-11-16  Marc Singer  <elf@buici.com>

	* src/mach-lh7952x/drv-emac.c (cmd_emac): Ethernet MAC maintenance
	function as well as interface initialization.
