@@ -3,7 +3,9 @@ ARCH=arm
 #CROSS_COMPILE=/usr/arm-linux/gcc-3.3-glibc-2.3.2/bin/arm-linux-
 #CROSS_COMPILE=/usr/arm-linux/gcc-3.4.1t-glibc-2.3.3/bin/arm-linux-
 
-CROSS_COMPILE=/usr/arm-linux/gcc-3.4.1-glibc-2.3.3/bin/arm-linux-
+#CROSS_COMPILE=/usr/arm-linux/gcc-3.4.1-glibc-2.3.3/bin/arm-linux-
+CROSS_COMPILE=/usr/arm-linux/gcc-2.95.3-glibc-2.2.2/bin/arm-linux-
+
 #CROSS_COMPILE=/usr/armv5b-softfloat-linux/gcc-3.4.2-glibc-2.3.3/bin/armv5b-softfloat-linux-
 
 VERSION = 1
