@@ -34,6 +34,7 @@
 
 #include <linux/types.h>
 #include <asm-arm/setup.h>
+#include <attributes.h>
 
 /* ----- Types */
 
@@ -46,13 +47,13 @@ struct atag_d {
 };
 
 
-#define __atag_0 __attribute__((used,section(".atag.0")))
-#define __atag_1 __attribute__((used,section(".atag.1")))
-#define __atag_2 __attribute__((used,section(".atag.2")))
-#define __atag_3 __attribute__((used,section(".atag.2")))
-#define __atag_4 __attribute__((used,section(".atag.2")))
-#define __atag_5 __attribute__((used,section(".atag.2")))
-#define __atag_6 __attribute__((used,section(".atag.2")))
-#define __atag_7 __attribute__((used,section(".atag.2")))
+#define __atag_0 __used __section(.atag.0)
+#define __atag_1 __used __section(.atag.1)
+#define __atag_2 __used __section(.atag.2)
+#define __atag_3 __used __section(.atag.2)
+#define __atag_4 __used __section(.atag.2)
+#define __atag_5 __used __section(.atag.2)
+#define __atag_6 __used __section(.atag.2)
+#define __atag_7 __used __section(.atag.2)
 
 #endif  /* __ATAG_H__ */
