@@ -32,6 +32,8 @@
 
 /* ----- Includes */
 
+#include <attributes.h>
+
 /* ----- Types */
 
 struct service_d {
@@ -40,15 +42,15 @@ struct service_d {
   void (*release) (void);
 };
 
-#define __service_0 __attribute__((used,section(".service.0"))) /* target */
-#define __service_1 __attribute__((used,section(".service.1"))) /* exception */
-#define __service_2 __attribute__((used,section(".service.2"))) /* timer */
+#define __service_0 __used __section(.service.0) /* target */
+#define __service_1 __used __section(.service.1) /* exception */
+#define __service_2 __used __section(.service.2) /* timer */
 
-#define __service_3 __attribute__((used,section(".service.3"))) /* serial */
-#define __service_4 __attribute__((used,section(".service.4"))) /* drv-mem */
-#define __service_5 __attribute__((used,section(".service.5")))
-#define __service_6 __attribute__((used,section(".service.6"))) /* drv-* */
-#define __service_7 __attribute__((used,section(".service.7"))) /* env */
+#define __service_3 __used __section(.service.3) /* serial */
+#define __service_4 __used __section(.service.4) /* drv-mem */
+#define __service_5 __used __section(.service.5)
+#define __service_6 __used __section(.service.6) /* drv-* */
+#define __service_7 __used __section(.service.7) /* env */
 
 /* ----- Globals */
 
